[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game3.gd" type="Script" id=1]
[ext_resource path="res://Personajes/Jugadores.tscn" type="PackedScene" id=2]

[node name="Game3" type="Node"]
script = ExtResource( 1 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 704.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Obstaculos" type="Timer" parent="."]

[node name="Puntaje" type="Timer" parent="."]

[node name="Comenzar" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
anchor_left = 0.227
anchor_top = 0.2
anchor_right = 0.818
anchor_bottom = 0.8
margin_left = 0.191986
margin_right = 0.127991
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="si" type="Button" parent="Control"]
margin_left = 96.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="Button" parent="Control"]
margin_left = 224.0
margin_top = 160.0
margin_right = 320.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="Control"]
margin_left = 96.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 96.0

[node name="Pausa" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugadores" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="Control/si" to="." method="_on_si_pressed"]
[connection signal="pressed" from="Control/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Pausa" to="." method="_on_Pausa_pressed"]
